--- a/Web Programming/Webspendoo-main/spendoo-main-web/tsconfig.json
+++ b/Web Programming/Webspendoo-main/spendoo-main-web/tsconfig.json
@@ -18,10 +18,10 @@
         "name": "next"
       }
     ],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     },
-    baseUrl: "."
   },
   "include": [
     "next-env.d.ts",
