--- a/spendoo-main-web/tsconfig.json
+++ b/spendoo-main-web/tsconfig.json
@@ -30,6 +30,6 @@
     ".next/types/**/*.ts",
     ".next/dev/types/**/*.ts",
     "**/*.mts"
-, "app/api/server.js"  ],
+, "app/api/route.js"  ],
   "exclude": ["node_modules"]
 }
